# api-cash-wise

./: .gitignore  README.md  pyproject.toml
finance_control_service/application/account/: account_dto.py  account_service.py  account_storage.py
finance_control_service/application/accounts/: accounts_dto.py  accounts_service.py  accounts_storage.py
finance_control_service/application/cards/: cards_dto.py  cards_service.py  cards_storage.py
finance_control_service/application/categories/: categories_dto.py  categories_service.py  categories_storage.py
finance_control_service/application/goals/: goals_dto.py  goals_sevice.py  goals_storage.py
finance_control_service/application/subcategories/: subcategories_dto.py  subcategories_service.py  subcategories_storage.py
finance_control_service/application/subcategory/: subcategory_dto.py  subcategory_service.py  subcategory_storage.py
finance_control_service/application/transactions/: transaction_dto.py  transaction_store_dto.py  transaction_update_dto.py  transactions_dto.py  transactions_service.py  transactions_storage.py
finance_control_service/application/user/: user_dto.py  user_storage.py
finance_control_service/domain/account/: entities.py  exceptions.py
finance_control_service/domain/accounts/: entities.py
finance_control_service/domain/cards/: entities.py  exceptions.py
finance_control_service/domain/categories/: entities.py  exceptions.py
finance_control_service/domain/goals/: entities.py  exceptions.py
finance_control_service/domain/subcategory/: entities.py  (+1 more)
infrastructure/api/: manage.py
(+59 files in other folders)
